Adds changes to index.html page

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -14,6 +14,18 @@
 
         <p>Taking light of my personal preferences, I love making new friends, getting along with them and enjoying my life to the fullest. Also, I am a huge fan of music. No matter what mood i am in, music always cheers me up.The song I prefer the most is <em>So Far Away</em> by <em>Martin Garrix</em>. It has a huge impact on me, it is not the lyrics but rather, the music and the melody which makes me mesmerized. I am that type of person who is self-motivated and try to achieve my goals by any means. Hopefully, I will end up my career as a professional web designer, maybe in less than five years. The motivational quote down below keeps me inspired whenever I feel inferior. <blockquote>A winner is a dreamer who never gives up - <cite>Nelson Mandela</cite></blockquote></p> 
         <footer>Copyright 2022</footer>
+        <hr>
+        <img src="images/myself.jpg" alt="This is an image of myself" width="200" height="200">
+        <section>
+            <h3>My hobbies</h3>
+            <ul>
+                <li>Listening to music</li>
+                <li>Dancing</li>
+                <li>Reading books</li>
+                <li>Engaging in outdoor activities</li>
+            </ul>
+        </section>
+        <p><a href="notes.html">Go to notes.html page</a></p>
     </body>
 </html>
 
