Creates styles.css

--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <title>HTML Assignment</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h2>Widana Arachchige Ayodya Subodi</h2>
+            <h2 class="site-title">Widana Arachchige Ayodya Subodi</h2>
         </header>
         <article>
             <h3>About Me</h3>
@@ -24,7 +25,7 @@
         
         <footer>Copyright 2022</footer>
         <hr>
-        <img src="images/myself.jpg" alt="This is an image of myself" width="200" height="200">
+        <img src="images/myself.jpg" alt="This is an image of myself" width="200" height="200" id="my-image">
         <section>
             <h3>My hobbies</h3>
             <ul>
