--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -2,9 +2,10 @@
 <html>
     <head>
         <title>description list</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        <h2>Tags and their applications</h2>
+        <h2 class="site-title">Tags and their applications</h2>
         <dl>
             <dt>The &lt;html&gt; tag</dt>
                 <dd>The &lt;html&gt; tag defines the root of an HTML document. All the HTML content is contained within the opening and closing tags of the &lt;html&gt; tag.</dd>
